# hello-from-copperspice

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
